@@ -887,6 +887,26 @@
       </component>
     </version>
   </module>
+  <module name="gnome-desktop">
+    <version release="gnome-2.4">
+      <component name="gnome-desktop" dir="gnome-desktop" group="desktop">
+        <podir dir="po"/>
+        <potname name="gnome-desktop-2.0.pot"/>
+        <branch name="gnome-2-4"/>
+        <regenerate/>
+        <download/>
+      </component>
+    </version>
+    <version release="gnome-2.6">
+      <component name="gnome-desktop" dir="gnome-desktop" group="desktop">
+        <podir dir="po"/>
+        <potname name="gnome-desktop-2.0.pot"/>
+        <branch name="HEAD"/>
+        <regenerate/>
+        <download/>
+      </component>
+    </version>
+  </module>
   <module name="gnome-games">
     <version release="gnome-2.4">
       <component name="gnome-games" dir="gnome-games" group="desktop">
