@@ -1,3 +1,8 @@
+2004-03-05  Danilo Šegan  <dsegan@gmx.net>
+
+	* translation-status.xml: Readd gnome-desktop (result of my
+	mistake long time ago).
+
 2004-03-05  Abel Cheung  <maddog@linux.org.hk>
 
 	* ignore-lang-list: Added "zh_HK" temporarily.
